<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context=".ForgotPassword">

    <RelativeLayout
        android:id="@+id/centerLine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerLine3"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPass"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dontWorry"
            android:textSize="23sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <EditText
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:textColorHint="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_above="@id/centerLine3"
        android:hint="@string/emailHint"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/passwordRecover"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/recover"
        android:layout_below="@id/centerLine3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <TextView
        android:id="@+id/goBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/backToLogin"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="20sp"/>


</RelativeLayout>