<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:id="@+id/centerLine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerLine2"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newUser"
            android:textSize="42sp"
            android:textColor="#FFBD4D"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/niceToSeeU"
            android:textSize="23sp"
            android:textColor="#00BCD4"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerLine2"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerLine2"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design"
        android:layout_below="@id/password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:text="@string/signUp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/wantToLogin"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:layout_below="@id/signUp"
        android:layout_marginTop="60dp"/>

</RelativeLayout>