<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/mainPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/goToForgotPassword"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/centerLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerLine"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/welcome"
            android:textSize="42sp"
            android:textColor="#FFBD4D"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginText"
            android:textSize="23sp"
            android:textColor="#00BCD4"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerLine"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerLine"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design"
        android:layout_below="@id/password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:text="@string/login"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/goToForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotPass"
        android:layout_below="@id/login"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:id="@+id/goToSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_design"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:text="@string/newUserSignIn"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>